[package]
name = "discriminator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = "0.25.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
convert_case = "0.6.0"